Bug 1278778 - Show JS stack traces of Fetch requests in Netmonitor r=bkelly